fixed z-index

--- a/tomcat_main/webapps/ROOT/styles/wstest.css
+++ b/tomcat_main/webapps/ROOT/styles/wstest.css
@@ -46,6 +46,7 @@
     width: 800px;
     height: 600px;
     left: -100px;
+    z-index: -999;
 }
 
 
